[package]
name = "libsmallworld"
version = "0.1.0"
edition = "2021"
authors = ["RoadrunnerWMC"]
license = "GPL-3.0-or-later"
description = "The library behind the \"smallworld\" binary crate"
homepage = "https://github.com/RoadrunnerWMC/smallworld"
repository = "https://github.com/RoadrunnerWMC/smallworld"
categories = ["game-development", "internationalization"]

[dependencies]
binread = "2.2.0"
enumflags2 = "0.7.9"
itertools = "0.12.1"
log = "0.4.21"
phf = { version = "0.11.2", features = ["macros"] }
thiserror = "1.0.58"
