[package]
name = "smallworld"
version = "0.1.0"
edition = "2021"
authors = ["RoadrunnerWMC"]
license = "GPL-3.0-or-later"
description = "A little tool to create region-free openingTitle.arc files for New Super Mario Bros. Wii, or to convert them from one region to another"
readme = "../README.md"
homepage = "https://github.com/RoadrunnerWMC/smallworld"
repository = "https://github.com/RoadrunnerWMC/smallworld"
categories = ["command-line-utilities", "game-development", "internationalization"]

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
env_logger = "0.11.3"
libsmallworld = { version = "0.1.0", path = "../libsmallworld" }
log = "0.4.21"

[dev-dependencies]
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
predicates = "3.1.0"
